empty-result component refactoring

--- a/src/app/shared/components/empty-result/empty-result.component.html
+++ b/src/app/shared/components/empty-result/empty-result.component.html
@@ -1,1 +1,4 @@
-<img alt="Not found" src="assets/images/pages/404.png">
+<div class="d-flex full-height full-width justify-content-center align-items-center">
+  <img [style.height]="imgHeight" alt="Not found" [src]="imgSrc">
+  <p class="text-center font-weight-bold font-medium-3">Hech nima topilmadi</p>
+</div>
