--- a/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.html
+++ b/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.html
@@ -1,120 +1,114 @@
-<core-sidebar cdkDrag [hideOnEsc]="true" [name]="'codeEditorSidebar'" class="code-editor-sidebar">
+<core-sidebar cdkDrag [hideOnEsc]="true" [name]="sidebarName" class="code-editor-sidebar">
   <a
     (click)="toggleSidebar()"
     class="btn-toggle d-flex align-items-center justify-content-center">
     <span [data-feather]="'terminal'"></span>
   </a>
 
-  <ng-scrollbar autoHeightDisabled="false">
-    <div class="card full-height position-relative">
-      <div class="" (keydown)="onKeyDown($event)">
-        <div class="card-header">
-          <div class="card-title">
-            {{ 'CODE_EDITOR.EDITOR' | translate }}
+  <ng-scrollbar>
+    <div class="card full-height position-relative" (keydown)="onKeyDown($event)">
+      <div class="card-header">
+        <div class="card-title">
+          {{ 'CODE_EDITOR.EDITOR' | translate }}
+        </div>
+
+        <div class="d-flex justify-content-between">
+          <div class="mr-2 cursor-pointer" cdkDragHandle>
+            <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
+              <path d="M0 0h24v24H0z" fill="none"></path>
+            </svg>
           </div>
 
-          <div class="d-flex justify-content-between">
-            <div class="mr-2 cursor-pointer" cdkDragHandle>
-              <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
-                <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
-                <path d="M0 0h24v24H0z" fill="none"></path>
-              </svg>
+          <button (click)="toggleSidebar()" aria-label="Close" class="close" type="button">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </div>
+      <hr class="mt-0">
+      <div class="card-body" [formGroup]="editorForm">
+        <div class="row">
+          <div class="col-lg-8 col-md-7 col-12">
+            <div
+              [ngbTooltip]="editorForm.controls.code.errors | errorMessage"
+              [style.height.%]="100"
+              container="body"
+              tooltipClass="tooltip-danger"
+            >
+              <monaco-editor
+                [lang]="editorForm.controls.lang.value"
+                [formControl]="editorForm.controls.code"
+                [height]="480">
+              </monaco-editor>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-5 d-none d-md-block">
+            <div class="form-group">
+              <label class="font-weight-bold">{{ 'Language' | translate }}: </label>
+              <ng-select
+                [clearable]="false"
+                [formControl]="editorForm.controls.lang"
+                (change)="langChange($event)">
+                <ng-option
+                  *ngFor="let availableLanguage of availableLanguages"
+                  [value]="availableLanguage.lang">
+                  {{ availableLanguage.langFull || availableLanguage.lang }}
+                </ng-option>
+              </ng-select>
             </div>
 
-            <button (click)="toggleSidebar()" aria-label="Close" class="close" type="button">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-        </div>
-        <hr class="mt-0">
-        <div class="card-body" [formGroup]="editorForm">
-          <div class="row">
-            <div class="col-lg-8 col-md-7 col-12">
-              <div
-                [ngbTooltip]="editorForm.controls.code.errors | errorMessage"
-                [style.height.%]="100"
-                container="body"
-                tooltipClass="tooltip-danger"
+            <div *ngIf="sampleTests.length > 0" class="form-group">
+              <label class="font-weight-bold">{{ 'CODE_EDITOR.SAMPLE_TEST' | translate }}: </label>
+              <ng-select
+                (change)="onSampleTestChange()"
+                [clearable]="false"
+                formControlName="testCaseNumber"
               >
-                <monaco-editor
-                  [lang]="editorForm.controls.lang.value"
-                  [formControl]="editorForm.controls.code"
-                  [height]="480">
-                </monaco-editor>
-              </div>
+                <ng-option
+                  *ngFor="let sampleTest of sampleTests;index as i"
+                  value="{{ i + 1 }}">
+                  {{ i + 1 }}
+                </ng-option>
+              </ng-select>
             </div>
 
-            <div class="col-lg-4 col-md-5 d-none d-md-block">
-              <div class="form-group">
-                <label>{{ 'Language' | translate }}: </label>
-                <ng-select
-                  [clearable]="false"
-                  [formControl]="editorForm.controls.lang"
-                  (change)="langChange($event)">
-                  <ng-option
-                    *ngFor="let availableLanguage of availableLanguages"
-                    [value]="availableLanguage.lang">
-                    {{ availableLanguage.langFull || availableLanguage.lang }}
-                  </ng-option>
-                </ng-select>
-              </div>
+            <div *ngIf="!isSelectedLangText()" class="form-group">
+              <label class="font-weight-bold">{{ 'CODE_EDITOR.INPUT' | translate }}:</label>
+              <textarea
+                [ngbTooltip]="editorForm.controls.input.errors | errorMessage"
+                class="form-control"
+                formControlName="input"
+                placeholder=""
+                rows="3"
+                tooltipClass="tooltip-danger"
+              ></textarea>
+            </div>
 
-              <div *ngIf="sampleTests.length > 0" class="form-group">
-                <label>{{ 'CODE_EDITOR.SAMPLE_TEST' | translate }}: </label>
-                <ng-select
-                  (change)="onSampleTestChange()"
-                  [clearable]="false"
-                  formControlName="testCaseNumber"
-                >
-                  <ng-option
-                    *ngFor="let sampleTest of sampleTests;index as i"
-                    value="{{ i + 1 }}">
-                    {{ i + 1 }}
-                  </ng-option>
-                </ng-select>
-              </div>
+            <div *ngIf="!isSelectedLangText()" class="form-group">
+              <label class="font-weight-bold">{{ 'CODE_EDITOR.OUTPUT' | translate }}:</label>
+              <textarea
+                class="form-control"
+                formControlName="output"
+                rows="2"
+              ></textarea>
+            </div>
 
-              <div *ngIf="!isSelectedLangText()" class="form-group">
-                <label>{{ 'CODE_EDITOR.INPUT' | translate }}:</label>
-                <textarea
-                  [ngbTooltip]="editorForm.controls.input.errors | errorMessage"
-                  class="form-control"
-                  formControlName="input"
-                  placeholder=""
-                  rows="3"
-                  tooltipClass="tooltip-danger"
-                ></textarea>
-              </div>
-
-              <div *ngIf="!isSelectedLangText()" class="form-group">
-                <label>{{ 'CODE_EDITOR.OUTPUT' | translate }}:</label>
-                <textarea
-                  class="form-control"
-                  formControlName="output"
-                  placeholder=""
-                  rows="2"
-                ></textarea>
-              </div>
-
-              <div *ngIf="!isSelectedLangText()" class="form-group">
-                <label>{{ 'CODE_EDITOR.ANSWER' | translate }}:</label>
-                <textarea
-                  class="form-control"
-                  formControlName="answer"
-                  placeholder=""
-                  rows="2"
-                ></textarea>
-              </div>
+            <div *ngIf="!isSelectedLangText()" class="form-group">
+              <label class="font-weight-bold">{{ 'CODE_EDITOR.ANSWER' | translate }}:</label>
+              <textarea
+                class="form-control"
+                formControlName="answer"
+                rows="2"
+              ></textarea>
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="card-footer d-none d-md-flex" [class]="{
-          'justify-content-between': authService.currentUserValue?.permissions?.canUseCheckSamples === false,
-          'justify-content-end': authService.currentUserValue?.permissions?.canUseCheckSamples === true,
-        }">
+      <div class="card-footer d-none d-md-flex justify-content-between">
+        @if (authService.currentUserValue?.permissions?.canUseCheckSamples === false){
           <kepcoin-spend-swal
-            *ngIf="authService.currentUserValue?.permissions?.canUseCheckSamples === false"
             (success)="checkSamplesPurchaseSuccess()"
             [customContent]="true"
             [purchaseUrl]="'problems/' + problem.id + '/purchase-check-samples/'"
@@ -127,64 +121,50 @@
               </button>
             </div>
           </kepcoin-spend-swal>
+        } @else {
+          <button
+            (click)="checkSamples()"
+            ngbTooltip="Alt+Z"
+            class="btn btn-glow btn-dark bg-dark mr-50"
+            type="button">
+            <span *ngIf="isCheckSamples" aria-hidden="true" class="spinner-border spinner-border-sm" role="status"></span>
+            <span *ngIf="!isCheckSamples"><i data-feather="terminal"></i></span>
+            {{ 'Check samples' | translate }}
+          </button>
+        }
+        <div class="d-flex">
+          <button
+            ngbTooltip="Alt+X"
+            (click)="run()"
+            *ngIf="!isSelectedLangText()"
+            class="btn btn-glow btn-dark bg-dark mr-50"
+            type="button">
+            <span *ngIf="isRunning" aria-hidden="true" class="spinner-border spinner-border-sm" role="status"></span>
+            <span *ngIf="!isRunning"><i data-feather="terminal"></i></span>
+            {{ 'CODE_EDITOR.RUN' | translate }}
+          </button>
 
-          <div class="d-flex">
-            <button
-              *ngIf="authService.currentUserValue?.permissions?.canUseCheckSamples === true"
-              (click)="checkSamples()"
-              class="btn btn-glow btn-dark bg-dark mr-50"
-              type="button">
-              <span *ngIf="isCheckSamples" aria-hidden="true" class="spinner-border spinner-border-sm" role="status"></span>
-              <span *ngIf="!isCheckSamples"><i data-feather="terminal"></i></span>
-              {{ 'Check samples' | translate }}
+          <kepcoin-spend-swal
+            (success)="answerForInput($event)"
+            *ngIf="answerForInputEnabled"
+            [customContent]="true"
+            [purchaseUrl]="'problems/' + problem.id + '/answer-for-input/'"
+            [requestBody]="{input_data: editorForm.get('input').value}"
+            [value]="1"
+          >
+            <button class="btn btn-glow btn-dark bg-dark mr-50" type="button">
+            <span
+              *ngIf="isAnswerForInput"
+              class="spinner-border spinner-border-sm"
+              role="status">
+            </span>
+              <span *ngIf="!isAnswerForInput">
+              <i data-feather="check-square"></i>
+            </span>
+              {{ 'CODE_EDITOR.ANSWER_FOR_INPUT' | translate }}
             </button>
+          </kepcoin-spend-swal>
 
-            <button
-              ngbTooltip="Alt+X"
-              (click)="run()"
-              *ngIf="!isSelectedLangText()"
-              class="btn btn-glow btn-dark bg-dark mr-50"
-              type="button">
-              <span *ngIf="isRunning" aria-hidden="true" class="spinner-border spinner-border-sm" role="status"></span>
-              <span *ngIf="!isRunning"><i data-feather="terminal"></i></span>
-              {{ 'CODE_EDITOR.RUN' | translate }}
-            </button>
-
-            <kepcoin-spend-swal
-              (success)="answerForInput($event)"
-              *ngIf="answerForInputEnabled"
-              [customContent]="true"
-              [purchaseUrl]="'problems/' + problem.id + '/answer-for-input/'"
-              [requestBody]="{input_data: editorForm.get('input').value}"
-              [value]="1"
-            >
-              <button class="btn btn-glow btn-dark bg-dark mr-50" type="button">
-              <span
-                *ngIf="isAnswerForInput"
-                class="spinner-border spinner-border-sm"
-                role="status">
-              </span>
-                <span *ngIf="!isAnswerForInput">
-                <i data-feather="check-square"></i>
-              </span>
-                {{ 'CODE_EDITOR.ANSWER_FOR_INPUT' | translate }}
-              </button>
-            </kepcoin-spend-swal>
-
-            <button
-              ngbTooltip="Alt+Enter"
-              (click)="submit()"
-              *ngIf="submitUrl"
-              [disabled]="!editorForm.valid"
-              class="btn btn-glow btn-dark bg-dark"
-              type="submit">
-              <i data-feather="send"></i>
-              {{ 'CODE_EDITOR.SUBMIT' | translate }}
-            </button>
-          </div>
-        </div>
-
-        <div class="card-footer d-md-none d-block text-right">
           <button
             ngbTooltip="Alt+Enter"
             (click)="submit()"
@@ -197,6 +177,76 @@
           </button>
         </div>
       </div>
+
+      <div class="card-footer d-md-none d-block text-right">
+        <button
+          ngbTooltip="Alt+Enter"
+          (click)="submit()"
+          *ngIf="submitUrl"
+          [disabled]="!editorForm.valid"
+          class="btn btn-glow btn-dark bg-dark"
+          type="submit">
+          <i data-feather="send"></i>
+          {{ 'CODE_EDITOR.SUBMIT' | translate }}
+        </button>
+      </div>
+    </div>
+  </ng-scrollbar>
+</core-sidebar>
+
+<core-sidebar [hideOnEsc]="true" [name]="checkSamplesResultSidebarName" class="check-samples-result">
+  <ng-scrollbar autoWidthDisabled="false">
+    <div class="card results-card full-height position-relative" (keydown)="onKeyDown($event)">
+      @if (isCheckSamples) {
+        <div class="card-body" [style.height.px]="200">
+          <spinner [name]="checkSamplesResultSidebarName"></spinner>
+        </div>
+      } @else {
+        <div class="card-header">
+          <div class="card-title">
+            {{ 'Result' | translate }}
+          </div>
+        </div>
+        <div class="card-body">
+          <ngb-accordion [closeOthers]="false" [destroyOnHide]="false">
+            @for (result of checkSamplesResult; track result.input){
+              <ngb-panel [cardClass]="'collapse-margin'" [id]="'result' + $index">
+                <ng-template ngbPanelTitle>
+                  <div class="font-weight-bolder d-flex justify-content-between">
+                    <span>TC #{{ $index + 1 }}</span>
+                    @if (result.verdict == 1){
+                      <span class="text-success">OK</span>
+                    } @else {
+                      <span class="text-danger">WA</span>
+                    }
+                  </div>
+                </ng-template>
+                <ng-template ngbPanelContent>
+                  <div class="meta" *ngIf="result.input">
+                    <div class="font-weight-bold">Input:</div>
+                    <div>{{ result.input }}</div>
+                  </div>
+
+                  <div *ngIf="result.answer">
+                    <div class="font-weight-bold">Answer:</div>
+                    <div>{{ result.answer }}</div>
+                  </div>
+
+                  <div *ngIf="result.output">
+                    <div class="font-weight-bold">Output:</div>
+                    <div>{{ result.output }}</div>
+                  </div>
+
+                  <div *ngIf="result.error">
+                    <div class="font-weight-bold">Error:</div>
+                    <div><pre>{{ result.error }}</pre></div>
+                  </div>
+                </ng-template>
+              </ngb-panel>
+            }
+          </ngb-accordion>
+        </div>
+      }
     </div>
   </ng-scrollbar>
 </core-sidebar>
