--- a/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
@@ -1,7 +1,16 @@
 <div class="card">
-  <div class="custom-table table-responsive">
-    <table class="table table-striped">
-      <thead>
+  @if (spinnerShow) {
+    <div class="card-body" [style.height.px]="300">
+      <spinner [name]="SpinnersEnum.ProblemsTable" type="ball-clip-rotate-multiple"></spinner>
+    </div>
+  } @else if (problems.length == 0){
+    <div class="card-body" [style.height.px]="300">
+      <empty-result imgHeight="150px"></empty-result>
+    </div>
+  } @else {
+    <div class="custom-table table-responsive">
+      <table class="table table-striped">
+        <thead>
         <tr class="bg-gradient-primary">
           <th>
             <table-ordering
@@ -69,77 +78,79 @@
             </table-ordering>
           </th>
         </tr>
-      </thead>
-  
-      <tbody>
-        <tr [@fadeInOnEnter] [ngClass]="{
+        </thead>
+
+        <tbody>
+          @for (problem of problems; track problem.id){
+            <tr [@fadeInOnEnter] [ngClass]="{
           'bg-light-success': problem.userInfo.hasSolved,
           'bg-light-danger': !problem.userInfo.hasSolved && problem.userInfo.hasAttempted
-        }" *ngFor="let problem of problems; index as i; trackBy:identify">
-          <td>
-            {{ problem.id }}
-          </td>
-  
-          <td>
-            <a [routerLink]="['problem', problem.id]">
-              <div>
-                {{ problem.title }}
-              </div>
+        }">
+              <td>
+                {{ problem.id }}
+              </td>
 
-              <span *ngIf="problem.hasSolution" class="badge mt-50 badge-pill badge-light-success">
+              <td>
+                <a [routerLink]="['problem', problem.id]">
+                  <div>
+                    {{ problem.title }}
+                  </div>
+
+                  <span *ngIf="problem.hasSolution" class="badge mt-50 badge-pill badge-light-success">
                 <i [data-feather]="'exists' | iconName" class="text-success" [size]="16"></i>
-                {{ 'Solution' | translate }}
+                    {{ 'Solution' | translate }}
               </span>
 
-              <span *ngIf="!problem.hasChecker" class="badge mt-50 badge-pill badge-light-danger">
-                <i [data-feather]="'not_exists' | iconName" class="text-danger" [size]="16"></i>  
-                {{ 'Checker' | translate }}
+                  <span *ngIf="!problem.hasChecker" class="badge mt-50 badge-pill badge-light-danger">
+                <i [data-feather]="'not_exists' | iconName" class="text-danger" [size]="16"></i>
+                    {{ 'Checker' | translate }}
               </span>
 
-              <span *ngIf="problem.hidden" class="badge mt-50 badge-pill badge-light-warning">
+                  <span *ngIf="problem.hidden" class="badge mt-50 badge-pill badge-light-warning">
                 <i [data-feather]="'eye-off'" class="text-warning" [size]="16"></i>
-                {{ 'Hidden' | translate }}
+                    {{ 'Hidden' | translate }}
               </span>
-            </a>
-          </td>
-  
-          <td>
-            <button
-              class="btn btn-primary round btn-sm"
-              *ngFor="let tag of problem.tags"
-              (click)="tagOnClick(tag.id)"
-            >
-              <small>
-                {{ tag.name }}
-              </small>
-            </button>
-          </td>
-  
-          <td class="text-center">
+                </a>
+              </td>
+
+              <td>
+                <button
+                  class="btn btn-primary round btn-sm"
+                  *ngFor="let tag of problem.tags"
+                  (click)="tagOnClick(tag.id)"
+                >
+                  <small>
+                    {{ tag.name }}
+                  </small>
+                </button>
+              </td>
+
+              <td class="text-center">
             <span class="badge badge-glow badge-{{ problem.difficulty | problemDifficultyColor }}">
               {{ problem.difficultyTitle | translate }}
             </span>
-          </td>
-  
-          <td class="text-center">
-            <div class="likes-count">
-              <i data-feather="thumbs-up"></i>
-              {{ problem.likesCount }}
-            </div>
-            <div class="dislikes-count">
-              <i data-feather="thumbs-down"></i>
-              {{ problem.dislikesCount }}
-            </div>
-          </td>
-  
-          <td class="text-center">
+              </td>
+
+              <td class="text-center">
+                <div class="likes-count">
+                  <i data-feather="thumbs-up"></i>
+                  {{ problem.likesCount }}
+                </div>
+                <div class="dislikes-count">
+                  <i data-feather="thumbs-down"></i>
+                  {{ problem.dislikesCount }}
+                </div>
+              </td>
+
+              <td class="text-center">
             <span class="badge badge-light-info text-center">
               <small class="text-success">{{ problem.solved }}</small><small class="text-dark">/</small><small class="text-info">{{ problem.attemptsCount }}</small>
             </span>
-          </td>
-        </tr>
-      </tbody>
-      <tfoot>
+              </td>
+            </tr>
+          }
+        </tbody>
+        <tfoot>
         <tr>
           <th>
             <i class="mr-50" [data-feather]="'problem' | iconName"></i>
@@ -166,7 +177,8 @@
             {{ 'ATTEMPTS' | translate }}
           </th>
         </tr>
-      </tfoot>
-    </table>
-  </div>
+        </tfoot>
+      </table>
+    </div>
+  }
 </div>
