posts-section refactoring

--- a/src/app/modules/home/posts-section/posts-section.component.html
+++ b/src/app/modules/home/posts-section/posts-section.component.html
@@ -1,4 +1,4 @@
-<swiper [config]="postsSwiperConfig" #postsSwiper [height]="300">
+<swiper *ngIf="lastPosts.length > 0" [config]="postsSwiperConfig" #postsSwiper [height]="500">
   <div class="swiper-slide" *ngFor="let post of lastPosts">
     <blog-post-card [blog]="post"></blog-post-card>
   </div>
