--- a/src/app/modules/courses/course/lesson/part-comments/part-comments.component.html
+++ b/src/app/modules/courses/course/lesson/part-comments/part-comments.component.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <quill-editor [(ngModel)]="comment">
+    <quill-editor class="full-width" [(ngModel)]="comment">
       <div quill-editor-toolbar>
         <span class="ql-formats">
           <button class="ql-bold" [title]="'Bold'"></button>
