--- a/src/app/modules/courses/course/course-reviews/reviews.component.html
+++ b/src/app/modules/courses/course/course-reviews/reviews.component.html
@@ -31,7 +31,7 @@
       </span>
     </div>
 
-    <quill-editor [(ngModel)]="review">
+    <quill-editor class="full-width" [(ngModel)]="review">
       <div quill-editor-toolbar>
         <span class="ql-formats">
           <button class="ql-bold" [title]="'Bold'"></button>
