--- a/src/app/modules/challenges/pages/challenge/challenge.component.html
+++ b/src/app/modules/challenges/pages/challenge/challenge.component.html
@@ -266,7 +266,7 @@
       </div>
 
       <div class="d-flex justify-content-center">
-        <button class="btn btn-relief-success" (click)="startSwal.dismiss()">
+        <button class="btn btn-relief-success" (click)="startSwal.close()">
           {{ 'Start' | translate }}
         </button>
       </div>
@@ -375,7 +375,7 @@
       </div>
 
       <div class="d-flex justify-content-center">
-        <button class="btn btn-relief-info" (click)="finishSwal.dismiss()">
+        <button class="btn btn-relief-info" (click)="finishSwal.close()">
           {{ 'OK' | translate }}
         </button>
       </div>
