--- a/src/app/shared/third-part-modules/apex-chart/apex-chart.component.html
+++ b/src/app/shared/third-part-modules/apex-chart/apex-chart.component.html
@@ -6,5 +6,11 @@
   [xaxis]="options.xaxis"
   [yaxis]="options.yaxis"
   [tooltip]="options.tooltip"
+  [dataLabels]="options.dataLabels"
+  [grid]="options.grid"
+  [stroke]="options.stroke"
+  [title]="options.title"
+  [plotOptions]="options.plotOptions"
+  [labels]="options.labels"
   [theme]="chartTheme"
 ></apx-chart>
