--- a/src/app/modules/problems/pages/problem/problem-og-image/problem-og-image.component.html
+++ b/src/app/modules/problems/pages/problem/problem-og-image/problem-og-image.component.html
@@ -4,7 +4,8 @@
       {{ problem.id }}. {{ problem.title }}
     </h3>
 
-    <span ngbTooltip="{{ 'DIFFICULTY' | translate }}"
+    <span
+      ngbTooltip="{{ 'DIFFICULTY' | translate }}"
       class="badge-pill badge-glow badge badge-{{ problem.difficulty | problemDifficultyColor }}">
       {{ problem.difficultyTitle | translate }}
     </span>
@@ -32,7 +33,7 @@
     <div class="mt-2">
       <span *ngFor="let availableLanguage of problem.availableLanguages">
         <a class="badge-pill text-white badge badge-{{ availableLanguage.lang }}">
-          {{ availableLanguage.lang | langFullName }}
+          {{ availableLanguage.langFull }}
         </a>
       </span>
     </div>
