--- a/src/app/modules/problems/pages/profile/section-profile/section-profile.component.html
+++ b/src/app/modules/problems/pages/profile/section-profile/section-profile.component.html
@@ -82,7 +82,7 @@
         <div class="topic d-flex justify-content-between" *ngFor="let topic of topics">
           <div class="d-flex topic-info justify-content-start">
             <div class="topic-image">
-              <img src="assets/images/problems/topics/topic-{{ topic.topic == 'Tricks' ? 'python-tricks' : topic.topic.toLowerCase() }}.png">
+              <img alt="topic" src="assets/images/problems/topics/topic-{{ topic.topic == 'Tricks' ? 'python-tricks' : topic.topic.toLowerCase() }}.png">
             </div>
             <div class="topic-title">
               {{ topic.topic }}
